plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
//    id 'org.graalvm.buildtools.native' version '0.11.5'
}

group = 'com.bekaku.api.spring'
version = '1.0.0'
java {
    sourceCompatibility = '25'
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    configureEach {
//        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
//        exclude group: 'commons-logging', module: 'commons-logging'
//        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
        exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
        exclude group: "ch.qos.logback", module: "logback-classic"
        exclude group: "ch.qos.logback", module: "logback-core"

    }
}
repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}
ext {
    set('springAiVersion', "2.0.0" )
}
dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
    }
}
dependencies {
//    Spring and Spring Boot dependencies
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
//    implementation 'org.springframework.boot:spring-boot-starter-undertow'

    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
//    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'org.springframework:spring-jcl:6.2.19'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'

    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'commons-validator:commons-validator:1.10.1'

//    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
//    implementation 'io.micrometer:micrometer-registry-prometheus:1.17.0-M1'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-autoconfigure-processor'

//    Databases

    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'org.postgresql:postgresql'
//    implementation 'com.mysql:mysql-connector-j:9.5.0'
    implementation 'com.zaxxer:HikariCP:7.1.0'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'

//    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0',
            'io.jsonwebtoken:jjwt-orgjson:0.13.0'

    implementation 'com.google.code.gson:gson:2.14.0'
//    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

//    implementation 'joda-time:joda-time:2.14.0'

    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // Report
    implementation 'org.apache.poi:poi-ooxml:5.5.1'

    implementation 'com.github.f4b6a3:uuid-creator:6.1.1'

//    caching
    implementation 'org.springframework.boot:spring-boot-starter-cache'
//    implementation 'javax.cache:cache-api:1.1.1'
    implementation 'org.ehcache:ehcache:3.12.0'

    //Google Service
    implementation 'com.google.guava:guava:33.6.0-jre'
    implementation 'com.google.firebase:firebase-admin:9.9.0'

    implementation 'org.jsoup:jsoup:1.22.2'

    // Spring AI
    implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
//    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
    implementation 'org.springframework.ai:spring-ai-starter-vector-store-qdrant'
    implementation 'org.springframework.ai:spring-ai-pdf-document-reader'
    implementation 'org.springframework.ai:spring-ai-advisors-vector-store:2.0.0-M8'
    implementation("org.springframework.ai:spring-ai-starter-mcp-client")

    // Document readers
    implementation 'org.springframework.ai:spring-ai-tika-document-reader'
//    implementation 'org.apache.tika:tika-parsers-standard-package'

    //Image
    implementation 'net.coobird:thumbnailator:0.4.21'
    implementation 'com.drewnoakes:metadata-extractor:2.20.0'
    implementation 'org.apache.tika:tika-core:3.3.1'
    implementation 'org.apache.tika:tika-parsers-standard:3.3.1'
    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.13.1'

//    implementation("org.springframework.boot:spring-boot-starter-webflux")
//    implementation 'org.apache.pdfbox:pdfbox:3.0.7'


    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    developmentOnly("org.springframework.boot:spring-boot-devtools")
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.projectlombok:lombok:1.18.42'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.1.0-M1'
}

/*
graalvmNative {
    binaries {
        main {
            imageName = 'api-service'
//            buildArgs.add('--enable-monitoring=heapdump')
//            buildArgs.add('--enable-http')
//            buildArgs.add('--enable-https')
            buildArgs.addAll([
//                    '-J-Xmx7G',
//                    '-J-Xms4G',
                    // '-J-XX:ActiveProcessorCount=2',
                    "--initialize-at-run-time=org.springframework.security.config.annotation.method.configuration.AuthorizationProxyWebConfiguration",
            ])
        }
    }
}
 */
tasks.named('test') {
    useJUnitPlatform()
}
tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base:latest'
}
/*
tasks.register('runGenerateSrc') {
    def url = 'http://localhost:8080/dev/development/generateSrc'
    def body = '{}'
    def content = "content-type:application/json"
    def command = ['curl', '-s', '--request', 'POST', '--data', body, '--header', content, url]
    println "command:" + command
    def proc = command.execute()
    proc.waitFor()
    def jsonstr = proc.in.text
    println jsonstr
}
 */

tasks.register('runDev') {
    dependsOn 'bootRun'
    bootRun.systemProperty('spring.profiles.active', 'dev')
}
tasks.register('runDebug') {
    // ./gradlew bootRun --args='--debug'
}
tasks.register('runProd') {
    dependsOn 'bootRun'
    bootRun.systemProperty('spring.profiles.active', 'prod')
}
tasks.register('runBuild') {
    dependsOn 'bootJar'
    bootRun.systemProperty('spring.profiles.active', 'prod')
}